--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.1",
+    "express-jwt": "^8.5.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "morgan": "~1.9.1"
   }
